fixed transformation column spacing

--- a/assets/css/partials/_transformation.scss
+++ b/assets/css/partials/_transformation.scss
@@ -13,7 +13,6 @@
     width: 30%;
     min-width: 300px;
     text-align: center;
-    margin: 0 10px;
 
     p {
         padding: 0 1em;
@@ -23,4 +22,16 @@
         width: 300px;
         margin: 1em 0;
     }
+}
+
+.transformation-info:nth-of-type(2){
+    margin: 0 20px;
+}
+
+@media only screen and (max-width:800px) {
+
+    .transformation-info {
+        margin: 3em 0;
+    }
+
 }
